# incognito

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: README.md  design.md  enum_utils.md  property_utils.md  vehicle_database.md
enum_utils/: CMakeLists.txt
enum_utils/include/enum_utils/: enum_string.h  enum_values.h  sized_enum.h
property_utils/: CMakeLists.txt
property_utils/include/property_utils/: fixed_string.h  property_token.h  property_traits.h
vehicle_database/: CMakeLists.txt
vehicle_database/include/vehicle_database/demo/: all_vehicles.h  demo.h  vehicle_database_demo.h  vehicle_factory.h
vehicle_database/include/vehicle_database/enum_strings/: all_vehicle_enum_strings.h  bicycle_property_enum_string.h  car_property_enum_string.h  common_property_enum_string.h  plane_property_enum_string.h  truck_property_enum_string.h  vehicle_type_enum_string.h
vehicle_database/include/vehicle_database/enums/: bicycle_property_enum.h  car_property_enum.h  common_property_enum.h  plane_property_enum.h  truck_property_enum.h  vehicle_type_enum.h
vehicle_database/include/vehicle_database/tokens/: bicycle_property_token.h  car_property_token.h  common_property_token.h  plane_property_token.h  truck_property_token.h  vehicle_token_factory.h
vehicle_database/include/vehicle_database/vehicles/: bicycle.h  car.h  plane.h  truck.h  vehicle.h  vehicle_definitions.h  vehicle_property_interface.h
vehicle_database/src/vehicle_database/: main.cpp
vehicle_database/src/vehicle_database/demo/: demo.cpp  vehicle_database_demo.cpp  vehicle_factory.cpp
vehicle_database/src/vehicle_database/vehicles/: bicycle.cpp  car.cpp  plane.cpp  truck.cpp
